@@ -2,6 +2,7 @@ pki (10.0~git20120703+dfsg1-1) UNRELEASED; urgency=low
 
   * New upstream snapshot of the 10.x branch.
   * Drop get-rid-of-osutil.diff, applied upstream.
+  * Refresh debian-support.diff.
 
  -- Timo Aaltonen <tjaalton@ubuntu.com>  Tue, 03 Jul 2012 11:44:03 +0300
 
